@@ -14,6 +14,10 @@
 10. Remove linkage to libkfile
 11. Set toolbar frame width to 0 if not drawing borders.
 12. Added option to remove all borders from maximised windows.
+13. Fix rounding top of menubar items in OO.o if this option is enabled.
+14. If using highlight as menu item colour, then for oo.o if text r/g/b<50
+    and highlightedText r/g/b<127 - then blend highlight colour with menu
+    colour.
 
 1.2.0
 -----
